--- a/quizlette/src/pages/welcomePage.css
+++ b/quizlette/src/pages/welcomePage.css
@@ -43,9 +43,9 @@ body{
         cursor: pointer;
         display: inline-block;
         vertical-align: bottom;
-        box-shadow: rgb(0 0 0 / 25%) 0px -4px inset;
-        background: rgb(51, 51, 51);
-        color: rgb(255, 255, 255);
+        box-shadow: rgba(160, 87, 87, 0.25) 0px -4px inset;
+        background: (51, 51, 51);
+        color: white;
         border-radius: 4px;
         font-family: Montserrat, "Noto Sans Arabic", "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-size: 0.875rem;
@@ -102,18 +102,27 @@ body{
     position: relative;
     vertical-align: middle;
 }
-.button{
-    background-color: white; 
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
+.button11{
+    width: 100%;
+        margin: 0px;
+        border: 0px;
+        cursor: pointer;
+        display: inline-block;
+        vertical-align: bottom;
+        box-shadow: rgba(160, 87, 87, 0.25) 0px -4px inset;
+        background: (51, 51, 51);
+        color: white;
+        border-radius: 4px;
+        font-family: Montserrat, "Noto Sans Arabic", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.875rem;
+        font-weight: bold;
+        text-align: center;
+        text-decoration: none;
+        min-width: 48px;
+        min-height: 48px;
+        padding: 0px 16px 4px;
+        position: relative; 
+
   
 }
 .bonjour{
@@ -167,7 +176,74 @@ body{
 .select{
     width: 200px;
     text-align: center;
+    background-color: white;
 }
 .category{
     outline: white;
+}
+
+.subtitle{
+    font-family: 'Concert One', cursive;
+    color: white;
+    align-items: center;
+    font-size: 30px;
+}
+
+.h5{
+    font-family: 'Concert One', cursive;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+.h6{
+    font-family: 'Concert One', cursive;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+.h7{
+    font-family: 'Concert One', cursive;
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    align-items: center;
+
+}
+.menu-link{
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    cursor: pointer;  
+    background-color: white; 
+    color: black; 
+    border: 2px solid #3351db;
+    align-items: center;
+}
+.menu-link:hover {
+    background-color: #3351db;
+    color: white;
+  }
+
+.title{
+
+    font-family: 'Concert One', cursive;
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    align-items: center;
+}
+.table{
+    font-family: 'Concert One', cursive;
+    color: white;
+    text-align: center;
+    font-size: 15px;
+    text-align: center;
+
+
+}
+.button1{
+    background-color: aliceblue;
+    
 }
