--- a/quizlette/src/components/Question.css
+++ b/quizlette/src/components/Question.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    border: 5px solid grey;
+    border: 5px solid lightblue;
     padding: 20px;
     margin-top: 10px;
   }
