--- a/quizlette/src/components/Question.css
+++ b/quizlette/src/components/Question.css
@@ -48,7 +48,7 @@
   }
   
   .select {
-    background-color: rgb(7, 207, 0);
+    background-color: white;
     color: white;
     box-shadow: 0 0 1px black;
   }
