--- a/quizlette/src/components/Question.css
+++ b/quizlette/src/components/Question.css
@@ -59,3 +59,8 @@
     box-shadow: 0 0 1px black;
   }
   
+  #nameInputBox {
+    border: 1px solid white;
+    color: black;
+    background: white;
+  }
